[package]
name = "writer"
version = "0.1.0"
authors = ["Max Diamandopol <max.diamandopol@intenthq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
elasticsearch = "7.9.0-alpha.1"
serde = "~1"
serde_json = "~1"
tokio = { version = "*", features = ["full"] }